force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__Account__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the Household Account if a Program Engagement benefits members of the Contact&apos;s Household Account. For example, meals from a food bank. If it benefits only one Contact, leave blank.</description>
    <inlineHelpText>Select the Household Account if a Program Engagement benefits members of the Contact&apos;s Household Account. For example, meals from a food bank. If it benefits only one Contact, leave blank.</inlineHelpText>
    <label>Household Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>