force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ApplicationDate__c</fullName>
    <description>If the Program Engagement stage is Applied, the Application Date is set to TODAY() by the Process Builder process, Template: Program Engagement Object. Clone the template to edit it.</description>
    <inlineHelpText>If the Program Engagement stage is Applied, the Application Date defaults to today if left blank.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>