force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__AutoName_Override__c.field-meta.xml
<CustomField>
    <fullName>pmdm__AutoName_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, the Program Engagement Name can be manually defined. It will not be auto-named.</description>
    <inlineHelpText>When this is checked, the Program Engagement Name can be manually defined. It will not be auto-named.</inlineHelpText>
    <label>Auto-Name Override</label>
    <type>Checkbox</type>
</CustomField>