force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__Contact__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact engaging in your Program. The Contact name is used with the Program Name in the the Process Builder process titled Template: Program Engagement Object that populates the Program Engagement Name.</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>