force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__EndDate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__EndDate__c</fullName>
    <description>If the Program Engagement stage is Completed or Withdrawn, the End Date is set to TODAY() by the Process Builder process Template: Program Engagement Object. Clone the process template to edit it.</description>
    <inlineHelpText>If the Program Engagement Stage is Completed or Withdrawn, the End Date defaults to today if left blank.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>