force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__LastServiceDate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__LastServiceDate__c</fullName>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>