force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__NumPresentServiceDeliveries__c.field-meta.xml
<CustomField>
    <fullName>pmdm__NumPresentServiceDeliveries__c</fullName>
    <label>Number of Present Service Deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>