force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__Program__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>pmdm__Program__c.pmdm__Status__c</field>
            <operation>equals</operation>
            <value>Planned, Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pmdm__Program__c</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>