force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__ProgramCohort__c.field-meta.xml
<CustomField>
    <fullName>pmdm__ProgramCohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Cohort</label>
    <referenceTo>pmdm__ProgramCohort__c</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>ProgramEngagements</relationshipName>
    <type>Lookup</type>
</CustomField>