force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__Role__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Role__c</fullName>
    <description>A Contact&apos;s relationship with the Program Engagement. Values are determined by your Admin.</description>
    <inlineHelpText>A Contact&apos;s relationship with the Program Engagement. Values are determined by your Admin.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>