force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__Stage__c.field-meta.xml
<CustomField>
    <fullName>pmdm__Stage__c</fullName>
    <description>A Contact&apos;s stage in a Program Engagement. Picklist values are determined by your Admin. Don&apos;t delete or modify the API Name of the Active And Enrolled picklist values as they are referenced in PMM reports.</description>
    <inlineHelpText>These Picklist values describe a Contact&apos;s stage of engagement in a Program and are displayed in a Path. Values are determined by your Admin.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Application Denied</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>