force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__StartDate__c.field-meta.xml
<CustomField>
    <fullName>pmdm__StartDate__c</fullName>
    <description>If the Program Engagement stage is set to Enrolled or Active, the Start Date is set to TODAY() by the Process Builder process, Template: Program Engagement Object. Clone the template to edit it.</description>
    <inlineHelpText>If the Program Engagement Stage is Enrolled or Active, the Start Date defaults to today if left blank.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>