force-app/main/default/objects/pmdm__ProgramEngagement__c/validationRules/pmdm__APPLICATION_DATE_BEFORE_END_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>pmdm__APPLICATION_DATE_BEFORE_END_DATE</fullName>
    <active>true</active>
    <description>Ensures Application Date is after the End Date</description>
    <errorConditionFormula>pmdm__ApplicationDate__c &gt;  pmdm__EndDate__c</errorConditionFormula>
    <errorMessage>End Date must be after the Application Date</errorMessage>
</ValidationRule>