force-app/main/default/objects/pmdm__ProgramEngagement__c/validationRules/pmdm__APPLICATION_DATE_BEFORE_START_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>pmdm__APPLICATION_DATE_BEFORE_START_DATE</fullName>
    <active>true</active>
    <description>Ensures application date is after the start date</description>
    <errorConditionFormula>pmdm__ApplicationDate__c &gt; pmdm__StartDate__c</errorConditionFormula>
    <errorMessage>Start Date must be after the Application Date</errorMessage>
</ValidationRule>