force-app/main/default/objects/pmdm__ProgramEngagement__c/validationRules/pmdm__PROGRAM_MATCHES_COHORT_PROGRAM.validationRule-meta.xml
<ValidationRule>
    <fullName>pmdm__PROGRAM_MATCHES_COHORT_PROGRAM</fullName>
    <active>true</active>
    <description>The Program must match the Program Cohort&apos;s Program when Program Cohort is populated.</description>
    <errorConditionFormula>AND(
!ISBLANK(pmdm__Program__c),
!ISBLANK(pmdm__ProgramCohort__c),
pmdm__ProgramCohort__r.pmdm__Program__c != pmdm__Program__c
)</errorConditionFormula>
    <errorMessage>Select a Program Cohort that matches the Program.</errorMessage>
</ValidationRule>