force-app/main/default/objects/pmdm__ProgramEngagement__c/validationRules/pmdm__START_DATE_BEFORE_END_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>pmdm__START_DATE_BEFORE_END_DATE</fullName>
    <active>true</active>
    <description>Ensures the start date is before the end date.</description>
    <errorConditionFormula>pmdm__StartDate__c &gt; pmdm__EndDate__c</errorConditionFormula>
    <errorMessage>Start Date must be before End Date</errorMessage>
</ValidationRule>