force-app/main/default/objects/pmdm__ProgramEngagement__c/listViews/pmdm__MyProgramEngagementsOwner.listView-meta.xml
<ListView>
    <fullName>pmdm__MyProgramEngagementsOwner</fullName>
    <columns>NAME</columns>
    <columns>pmdm__Contact__c</columns>
    <columns>pmdm__Stage__c</columns>
    <columns>pmdm__StartDate__c</columns>
    <columns>pmdm__EndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Program Engagements</label>
</ListView>