force-app/main/default/objects/pmdm__ProgramEngagement__c/listViews/pmdm__WaitlistedProgramEngagements.listView-meta.xml
<ListView>
    <fullName>pmdm__WaitlistedProgramEngagements</fullName>
    <columns>NAME</columns>
    <columns>pmdm__Contact__c</columns>
    <columns>pmdm__Program__c</columns>
    <columns>pmdm__Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pmdm__Stage__c</field>
        <operation>equals</operation>
        <value>Waitlisted</value>
    </filters>
    <label>Waitlisted Program Engagements</label>
</ListView>